[metadata]
name = cabinet
version = 2023.05.31.2
author = Tyler Woodfin
author_email = feedback@tyler.cloud
description = Easily manage data storage and logging across repos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylerjwoodfin/cabinet
project_urls =
Bug Tracker = https://github.com/tylerjwoodfin/cabinet/issues
py_modules=["cabinet"]
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
[options]
package_dir =
    = src

packages = find:
python_requires = >=3.6
[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cabinet = cabinet:main