[metadata]
name = cabinet
version = 1!1.0.0
author = Tyler Woodfin
author_email = feedback@tyler.cloud
description = Easily manage data storage and logging across repos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylerjwoodfin/cabinet
project_urls =
bug tracker = https://github.com/tylerjwoodfin/cabinet/issues
py_modules=["cabinet"]
classifiers =
programming language :: Python :: 3
license :: OSI Approved :: MIT License
operating system :: OS Independent
[options]
package_dir =
    = src

packages = find:
python_requires = >=3.6
[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cabinet = cabinet:main
