[metadata]
name = cabinet
version = 1!1.1.5
author = Tyler Woodfin
author_email = feedback-cabinet@tyler.cloud
description = Easily manage data storage and logging across repos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylerjwoodfin/cabinet
project_urls =
    bug tracker = https://github.com/tylerjwoodfin/cabinet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pymongo
    prompt_toolkit

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cabinet = cabinet:main
